--- a/style.css
+++ b/style.css
@@ -1,75 +1,106 @@
 body {
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
   background: #ffffba;
 }
+
 .main {
   font-family: trajan-sans-pro, sans-serif;
-font-style: normal;
-font-weight: 200;
+  font-style: normal;
+  font-weight: 200;
 }
-
 
 .articletext {
-font-family: "Tahoma",sans-serif;
-
+  font-family: "Tahoma", sans-serif;
 }
+
 .poemtext {
-
-font-family: serif;
+  font-family: serif;
 }
+
 .hi {
   display: flex;
-color: white;
-background:gray;
-font-size: 16px;
-font-family: sans-serif;
-margin:0px;
-width: 100%;
-padding:10px 0px 10px 0px;
-justify-content: center;
-text-align: center;
+  color: white;
+  background: gray;
+  font-size: 16px;
+  font-family: sans-serif;
+  margin: 0px;
+  width: 100%;
+  padding: 10px 0px 10px 0px;
+  justify-content: center;
+  text-align: center;
 }
 
 .topbox {
-display: flex;
-background: red;
-width:100%;
-height:75px;
-justify-content: center;
-margin: 0;
+  display: flex;
+  background: red;
+  width: 100%;
+  height: 75px;
+  justify-content: center;
+  margin: 0;
 }
+.topbox:hover {
+background:black;
+transition: 1s ease;
+color:yellow;
 
+}
 a:hover {
-color:red;
-
+  color: red;
 }
 
 li {
-background: skyblue;
-width:100px;
-height:20px;
-padding: 4px;
-text-align: center;
-margin-bottom: 5px;
-border-radius: 10px;
-font-family: trajan-sans-pro, sans-serif;
-font-style: normal;
-font-weight: bold;
-list-style: none;
+  background: skyblue;
+  width: 100px;
+  height: 20px;
+  padding: 4px;
+  text-align: center;
+  margin-bottom: 5px;
+  border-radius: 10px;
+  font-family: trajan-sans-pro, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  list-style: none;
+}
+
+.poembutton:hover {
+  background: yellow;
+  transition: 1s ease;
+  width: 200px;
 }
 
 ul {
   list-style: none;
 }
+
 .poemtitle {
-  width:100px;
-  height:20px;
+  width: 100px;
+  height: 20px;
   padding: 4px;
   text-align: center;
   margin-bottom: 5px;
-background: red;
-text-align: center;
-margin-left: 40px;
-font-weight: bold;
+  background: red;
+  text-align: center;
+  margin-left: 40px;
+  font-weight: bold;
+}
+
+.poemtitle:hover {
+  background: blue;
+  transition: 1s ease-in-out;
+  color: white;
+}
+
+.poemtitle:hover .poembutton {
+  /* display: block; */
+  opacity: 1;
+  position: fixed;
+  transition: 1s ease;
+  background:red;
+}
+
+.articlebutton:hover {
+  background: palegreen;
+  width: 200px;
+  transition: 1s ease;
 }
