--- a/3-1style.css
+++ b/3-1style.css
@@ -1,6 +1,7 @@
 body {
   margin:0;
   padding:0;
+  background: pink;
 }
 
 
@@ -11,18 +12,19 @@ font-size: 16px;
 font-family: sans-serif;
 margin:0px;
 max-width: 400px;
+margin: auto;
 }
 h1 {
   font-size: 20px;
   background: yellow;
-  margin:0px;
-  padding:20px 40px 0px 5px;
   font-weight: bolder;
   font-family: "times new roman"; serif;
   font-style: italic;
   text-decoration: underline;
-  width:200px;
+  padding: 10px;
   height: 25px;
+  margin:auto;
+  width:150px;
 }
 a{
 color:black;
@@ -33,7 +35,9 @@ h3 {
 background:gray;
 color:yellow;
 font-family: sans-serif;
-width:200px;
+width:300px;
+margin: auto;
+padding: 10px;
 
 }
 ul {
@@ -41,6 +45,7 @@ ul {
   color:blue;
   font-family: sans-serif;
   width:200px;
+  margin: auto;
 
 
 }
@@ -68,4 +73,16 @@ max-height: 100%;
   font-style: normal;
   font-weight: bold;
   list-style: none;
+}
+
+.end {
+width: 175px;
+
+}
+
+
+.buttons {
+display: flex;
+flex-direction: row;
+
 }
