--- a/3-2style.css
+++ b/3-2style.css
@@ -1,29 +1,30 @@
 body {
   margin:0;
   padding:0;
+  background: #E5D700;
 }
 
 
 p {
 color: white;
-background:darkred;
+background:#403C00;
 font-size: 16px;
 font-family: sans-serif;
 margin:0px;
 max-width: 250px;
 border-radius: 5px;
-padding: 2px 5px 2px 0px;
+padding-left: 5px;
+margin-left: 20px;
 }
 h1 {
   font-size: 20px;
-  background: red;
+  background: yellow;
+  margin-left: 80%;
   padding-left: 10px;
-  width:200px;
+  width:175px;
   height: 25px;
   border: 2px;
   border-radius: 10px;
-  margin-left: 50%;
-  color:black;
 }
 a{
 color:black;
@@ -31,34 +32,54 @@ text-decoration: none;
 
 }
 h3 {
-background:violet;
-color:purple;
+background:#FFEF00;
+color:black;
 font-family: sans-serif;
-width:125px;
+width:300px;
   border-radius: 10px;
   padding: 5px;
 
 }
-ul {
-  background:black;
-  color:yellow;
+.firstlist {
+  background:#7F7700;
+  color:blue;
   font-family: sans-serif;
-  width:200px;
+  width:250px;
+  border-radius: 25px;
+
+  padding-top: 10px;
+  padding-bottom: 10px;
+
+
+}
+.secondlist {
+  background:#7F7700;
+  color:blue;
+  font-family: sans-serif;
+  width:100px;
+  border-radius: 25px;
+
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-left: 75px;
 
 
 }
 }
-
+img {
+max-width: 100%;
+max-height: 100%;
+}
 
 h4 {
 background: black;
 color:white;
-width:100px;
+width:200px;
 height:30px;
 padding: 5px;
-
+padding-left: 20px;
+margin-left: 30px;
 }
-
 .homebutton {
   background: skyblue;
   width: 50px;
@@ -71,4 +92,9 @@ padding: 5px;
   font-style: normal;
   font-weight: bold;
   list-style: none;
+}
+.buttons {
+display: flex;
+flex-direction: row;
+
 }
