--- a/3-3style.css
+++ b/3-3style.css
@@ -1,57 +1,50 @@
 body {
   margin:0;
   padding:0;
+  background: black;
 }
 
 
 p {
-color: white;
+color: #F2B279;
 background:darkred;
-font-size: 16px;
-font-family: sans-serif;
 margin:0px;
-max-width: 250px;
+max-width: 175px;
 border-radius: 5px;
-padding-left: 5px;
+padding-left: 40px;
+padding-right: 40px;
+padding-bottom: 10px;
 }
 h1 {
-  font-size: 20px;
-  background: yellow;
-  margin:0px;
-  padding-left: 10px;
-  width:200px;
-  height: 25px;
+  background: red;
+  padding-left: 40px;
+  width:300px;
+  height: 50px;
   border: 2px;
   border-radius: 10px;
+  color:black;
 }
 a{
 color:black;
-text-decoration: none;
 
 }
 h3 {
-background:lightblue;
-color:black;
-font-family: sans-serif;
-width:300px;
+background:violet;
+color:purple;
+width:125px;
   border-radius: 10px;
   padding: 5px;
-
+  margin-left: 75px;
 }
 ul {
-  background:lightblue;
-  color:blue;
-  font-family: sans-serif;
+  background:black;
+  color:yellow;
   width:200px;
-  border-radius: 25px;
 
 
 }
 }
-img {
-max-width: 100%;
-max-height: 100%;
-}
+
 
 h4 {
 background: black;
@@ -61,6 +54,7 @@ height:30px;
 padding: 5px;
 
 }
+
 .homebutton {
   background: skyblue;
   width: 50px;
@@ -73,4 +67,15 @@ padding: 5px;
   font-style: normal;
   font-weight: bold;
   list-style: none;
+}
+.final {
+
+  width: 250px;
+  margin-left: 0;
+}
+
+.buttons {
+display: flex;
+flex-direction: row;
+
 }
