--- a/5-1style.css
+++ b/5-1style.css
@@ -123,3 +123,23 @@ animation: 1s godchange forwards;
 100% {color:lightyellow;}
 
 }
+
+.buttons {
+display: flex;
+flex-direction: row;
+
+}
+
+.homebutton {
+  background: skyblue;
+  width: 50px;
+  height: 20px;
+  padding: 4px;
+  text-align: center;
+  margin-bottom: 5px;
+  border-radius: 10px;
+  font-family: trajan-sans-pro, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  list-style: none;
+}
