--- a/5-3style.css
+++ b/5-3style.css
@@ -151,3 +151,21 @@ background-gr
 p:hover {
   animation: 2s bgchange forwards;
 }
+.buttons {
+display: flex;
+flex-direction: row;
+
+}
+.homebutton {
+  background: skyblue;
+  width: 50px;
+  height: 20px;
+  padding: 4px;
+  text-align: center;
+  margin-bottom: 5px;
+  border-radius: 10px;
+  font-family: trajan-sans-pro, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  list-style: none;
+}
