--- a/3-2style.css
+++ b/3-2style.css
@@ -8,8 +8,6 @@ body {
 p {
 color: white;
 background:#403C00;
-font-size: 16px;
-font-family: sans-serif;
 margin:0px;
 max-width: 250px;
 border-radius: 5px;
@@ -17,14 +15,13 @@ padding-left: 5px;
 margin-left: 20px;
 }
 h1 {
-  font-size: 20px;
   background: yellow;
-  margin-left: 80%;
   padding-left: 10px;
-  width:175px;
-  height: 25px;
+  width:250px;
+  height: px;
   border: 2px;
   border-radius: 10px;
+  margin-left: 20px;
 }
 a{
 color:black;
@@ -34,7 +31,6 @@ text-decoration: none;
 h3 {
 background:#FFEF00;
 color:black;
-font-family: sans-serif;
 width:300px;
   border-radius: 10px;
   padding: 5px;
@@ -43,7 +39,6 @@ width:300px;
 .firstlist {
   background:#7F7700;
   color:blue;
-  font-family: sans-serif;
   width:250px;
   border-radius: 25px;
 
@@ -55,7 +50,6 @@ width:300px;
 .secondlist {
   background:#7F7700;
   color:blue;
-  font-family: sans-serif;
   width:100px;
   border-radius: 25px;
 
