--- a/style.css
+++ b/style.css
@@ -161,3 +161,39 @@ display: flex;
 flex-direction: row;
 
 }
+
+
+.positionbutton {
+  font-family: trajan-sans-pro, sans-serif;
+  display: block;
+  background: red;
+  width: 100px;
+  padding: 4px;
+  text-align: center;
+  margin-left: 40px;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+.animationbutton {
+  font-family: trajan-sans-pro, sans-serif;
+  display: block;
+  background: red;
+  width: 100px;
+  padding: 4px;
+  text-align: center;
+  margin-left: 40px;
+  margin-bottom: 10px;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.animationbutton:hover {
+  transition: .5s ease;
+  background: palegreen;
+}
+
+.positionbutton:hover {
+  transition: .5s ease;
+  background: palegreen;
+}
