--- a/Story/style.css
+++ b/Story/style.css
@@ -1232,3 +1232,16 @@ p {
     bottom: 70%;
     z-index: -2;
   }
+
+.arrow {
+  height: 40px;
+  position: absolute;
+  left: 1%;
+  bottom: 2%;
+  z-index: 0;
+
+}
+
+.toparrow {
+  position: absolute;
+}
